--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "@hapi/hapi": "^20.1.5",
     "nanoid": "^3.1.23"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.9"
   }
 }
